# df_websockets

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  demo_manage.py  package-lock.json  package.json  pre-commit.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
.github/workflows/: basic_unittests.yml
.run/: build-prod.run.xml
demo_df_websockets/: __main__.py  asgi.py  settings.py  signals.py  urls.py  views.py
demo_df_websockets/static/: demo.css  demo.js
demo_df_websockets/templates/: index.html
df_websockets/: __init__.py  apps.py  celery.py  checks.py  constants.py  consumers.py  decorators.py  load.py  middleware.py  routing.py  tasks.py  testing.py  topics.py  triggering.py  utils.py  window_info.py  ws_middleware.py  ws_settings.py
df_websockets/management/commands/: __init__.py  celery.py  worker.py
df_websockets/static/js/: df_websockets.min.js  df_websockets.min.js.map
df_websockets/templatetags/: websockets.py
npm/: base.js  forms.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
npm/df_websockets/: app.js  base.js  forms.js  forms.ts  html.js
test_df_websockets/: test_consumers.py  test_decorators.py  test_middleware.py  test_testing.py  test_utils.py  test_window_info.py
