[metadata]
author = Matthieu Gallet
author_email = github@19pouces.net
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Websocket integration for Django
license = CeCILL-B
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Matthieu Gallet
maintainer_email = github@19pouces.net
name = df_websockets
url = https://github.com/d9pouces/df_websockets
version = attr: df_websockets.__version__

[options]
include_package_data = True
packages = find:
zip_safe = False
install_requires =
        asgiref
        celery
        channels
        channels_redis
        df_config
        django
        pyasn1>=0.4.8
        redis
[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=df_websockets
ignore_missing_imports=true

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88

[tox:tox]
envlist = py36,p37,py38
minversion = 3.4.0

[testenv]
deps = nose
commands = nosetests []

[testenv:precommit]
deps =
    black==19.10b0
    flake8
    isort
    mypy
commands =
    isort metier df_site
    flake8 metier df_site
    mypy metier df_site
    black metier df_site

;[build-system]
;requires = [
;  "setuptools >= 40.9.0",
;  "wheel",
;]
;build-backend = "setuptools.build_meta"
