[metadata]
author = Matthieu Gallet
author_email = github@19pouces.net
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Websocket integration for Django
license = CeCILL-B
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Matthieu Gallet
maintainer_email = github@19pouces.net
name = df_websockets
url = https://github.com/d9pouces/df_websockets
version = attr: df_websockets.__version__

[options]
include_package_data = True
packages = find:
zip_safe = False
install_requires =
        asgiref
        celery
        channels
        channels_redis
        df_config
        django
        hiredis<2.0
        pyasn1>=0.4.8
        redis

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=interdiode id_tests tools
ignore_missing_imports=true
python_version = 3.8

[flake8]
ignore = E203, E501, C901, F401, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tox:tox]
envlist = {py36,py37,py38,py39}-{django22,django30,django31}-{channels24,channels30},precommit
minversion = 3.4.0

[testenv]
commands =
        python demo_manage.py makemigrations
        python demo_manage.py migrate
        python demo_manage.py test test_df_websockets
deps =
        aiosmtpd
        hypothesis
        nose
        django22: Django>=2.2,<2.3
        django30: Django>=3.0,<3.1
        django31: Django>=3.1,<3.2
        channels24: channels>=2.4,<3.0
        channels30: channels>=3.0,<3.1
setenv =
        DF_REDIS_DB=1
        DF_REDIS_HOST=localhost
        DF_REDIS_PASSWORD=
        DF_REDIS_PORT=16379

[testenv:precommit]
deps =
    black==20.8b0
    flake8
    isort
    mypy
commands =
    isort df_websockets demo_df_websockets test_df_websockets
    flake8 df_websockets demo_df_websockets test_df_websockets
    mypy df_websockets demo_df_websockets test_df_websockets
    black df_websockets demo_df_websockets test_df_websockets
docker =

;[build-system]
;requires = [
;  "setuptools >= 40.9.0",
;  "wheel",
;]
;build-backend = "setuptools.build_meta"
